Thu Sep  8 17:40:15 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (gem): use the bindir of each gemspec instead
	  of hardcoded 'bin', since rdoc 5.0.0 overrides it.

Thu Sep  8 16:47:03 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_s_used_modules): rename Module.used_refinements to
	  Module.used_modules.  [Feature #7418] [ruby-core:49805]

Thu Sep  8 14:21:48 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/psych/psych.gemspec, lib/rdoc/rdoc.gemspec: Use file list instead of
	  git output. It shows warning message when invoke `make install`
	  [Bug #12736][ruby-dev:49778]

Thu Sep  8 13:41:46 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* insns.def (setclassvariable, setconstant): warn when self is a
	  refinement.  [Bug #10103] [ruby-core:64143]

Thu Sep  8 11:29:00 2016  Kenta Murata  <mrkn@mrkn.jp>

	* hash.c (rb_hash_transform_values, rb_hash_transform_values_bang):
	  Rename map_v to transform_values.
	  [Feature #12512] [ruby-core:76095]

	* test/ruby/test_hash.rb: ditto.

Thu Sep  8 10:08:35 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* {ext,test}/openssl: Import Ruby/OpenSSL 2.0.0.beta.2. The full commit
	  history since v2.0.0.beta.1 can be found at:
	  https://github.com/ruby/openssl/compare/v2.0.0.beta.1...v2.0.0.beta.2

Thu Sep  8 07:23:34 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rdoc/*, test/rdoc/*: Update rdoc-5.0.0.beta2
	  Fixed ri parse defect with left-hand matched classes.
	  https://github.com/rdoc/rdoc/pull/420

Thu Sep  8 01:12:47 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* eval.c (rb_mod_s_used_refinements): new method
	  Module.used_refinements.  based on the patch by Charlie
	  Somerville.  [Feature #7418] [ruby-core:49805]

Wed Sep  7 17:50:38 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/util.h (setenv): remove POSIX-noncompliant
	  definition with 2 arguments.

Wed Sep  7 17:35:37 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>
